# irrigation-app-nasa-data

./: README.md  pyproject.toml
app/: main.py
